added portfolio examples, modified header links

--- a/less/creative.less
+++ b/less/creative.less
@@ -346,3 +346,7 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: @theme-dark;
 }
+
+.carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img {
+  width: 100%;
+}
