--- a/css/creative.css
+++ b/css/creative.css
@@ -1,9 +1,3 @@
-/*!
- * Creative v1.0.3 (http://startbootstrap.com/template-overviews/creative)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
- */
-
 html,
 body {
   height: 100%;
@@ -47,7 +41,7 @@ p {
   background-color: #f05f40;
 }
 .bg-dark {
-  background-color: #222222;
+  background-color: #222;
   color: white;
 }
 .text-faded {
@@ -85,7 +79,7 @@ aside {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 13px;
-  color: #222222;
+  color: #222;
 }
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus:hover {
@@ -134,7 +128,7 @@ aside {
   }
   .navbar-default.affix .nav > li > a,
   .navbar-default.affix .nav > li > a:focus {
-    color: #222222;
+    color: #222;
   }
   .navbar-default.affix .nav > li > a:hover,
   .navbar-default.affix .nav > li > a:focus:hover {
@@ -276,9 +270,9 @@ header .header-content .header-content-inner p {
   padding-left: 0;
 }
 .btn-default {
-  color: #222222;
-  background-color: #ffffff;
-  border-color: #ffffff;
+  color: #222;
+  background-color: white;
+  border-color: white;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
@@ -289,7 +283,7 @@ header .header-content .header-content-inner p {
 .btn-default:active,
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
-  color: #222222;
+  color: #222;
   background-color: #f2f2f2;
   border-color: #ededed;
 }
@@ -316,15 +310,15 @@ fieldset[disabled] .btn-default:active,
 .btn-default.disabled.active,
 .btn-default[disabled].active,
 fieldset[disabled] .btn-default.active {
-  background-color: #ffffff;
-  border-color: #ffffff;
+  background-color: white;
+  border-color: white;
 }
 .btn-default .badge {
-  color: #ffffff;
-  background-color: #222222;
+  color: white;
+  background-color: #222;
 }
 .btn-primary {
-  color: #ffffff;
+  color: white;
   background-color: #f05f40;
   border-color: #f05f40;
   -webkit-transition: all 0.35s;
@@ -337,7 +331,7 @@ fieldset[disabled] .btn-default.active {
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-  color: #ffffff;
+  color: white;
   background-color: #ee4b28;
   border-color: #ed431f;
 }
@@ -369,7 +363,7 @@ fieldset[disabled] .btn-primary.active {
 }
 .btn-primary .badge {
   color: #f05f40;
-  background-color: #ffffff;
+  background-color: white;
 }
 .btn {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
@@ -384,12 +378,12 @@ fieldset[disabled] .btn-primary.active {
 ::-moz-selection {
   color: white;
   text-shadow: none;
-  background: #222222;
+  background: #222;
 }
 ::selection {
   color: white;
   text-shadow: none;
-  background: #222222;
+  background: #222;
 }
 img::selection {
   color: white;
@@ -400,5 +394,12 @@ img::-moz-selection {
   background: transparent;
 }
 body {
-  webkit-tap-highlight-color: #222222;
+  webkit-tap-highlight-color: #222;
+}
+.carousel-inner > .item > a > img,
+.carousel-inner > .item > img,
+.img-responsive,
+.thumbnail a > img,
+.thumbnail > img {
+  width: 100%;
 }
