--- a/less/creative.less
+++ b/less/creative.less
@@ -350,3 +350,9 @@ body {
 .carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img {
   width: 100%;
 }
+
+.img-responsive {
+  @media (min-width: 768px) {
+    max-height: 228px;
+  }
+}
